openai assistant, threads and w/o streaming messages

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ DICOTA_DB_BASE=testDB
 
 DICOTA_TOKEN_SECRET=myCustomTokenSecretValue
 
+OPENAI_API_KEY=
+
 ME_WEB_USERNAME=admin
 ME_WEB_PASSWORD=adminPassword
