--- a/nginx.conf
+++ b/nginx.conf
@@ -8,12 +8,20 @@ http {
         location / {
             proxy_pass http://api:3000;
             proxy_http_version 1.1;
-            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
+#         location /v1/ws {
+#             proxy_pass http://api:3000/v1/ws;
+#             proxy_http_version 1.1;
+#             proxy_set_header Upgrade $http_upgrade;
+#             proxy_set_header Connection "Upgrade";
+#         }
 
         location /mongo-admin {
             proxy_pass http://mongo-express:8081;
