--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ python-dotenv = "^1.0.1"
 loguru = "^0.7.2"
 fastapi-users = "^13.0.0"
 fastapi-users-db-beanie = "^3.0.0"
+openai = "^1.51.2"
 
 
 [tool.poetry.group.dev.dependencies]
